--- a/src/global.css
+++ b/src/global.css
@@ -63,14 +63,14 @@ footer .copyright:before {
     fill: none;
     stroke: transparent;
     stroke-width: 4;
-    stroke-miterlimit: 10
+    stroke-miterlimit: 10;
 }
 
 .st9 {
     fill: none;
     stroke: transparent;
     stroke-width: 4;
-    stroke-miterlimit: 10
+    stroke-miterlimit: 10;
 }
 
 .svg {
